5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1709_3069.log
== TEST (2019-05-02 10:10:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
-- ERROR:
File "XXXX", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:11:39) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- ERROR:
File "XXXX", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:11:41) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- ERROR:
File "XXXX", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:44) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.196757
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.183497
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.395645
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.274472
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.559278
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.671213
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:45) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.69451
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:51) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.131216
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:11:52) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- ERROR:
File "XXXX", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:12:02) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
	elif(ga==6):
		print("Grito aterrorizante")
	elif(tm=="quadrado da soma de pontos"):
		print("Toque da morte")
else:
	print("nenhum ponto")
-- ERROR:
File "XXXX", line 6
    elif(ga==6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:12:40) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
		elif(ga==6):
			print("Grito aterrorizante")
		elif(tm=="quadrado da soma de pontos"):
			print("Toque da morte")
else:
	print("nenhum ponto")
-- ERROR:
File "XXXX", line 6
    elif(ga==6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:12:46) 
-- CODE:
fi = "10 pontos"
ga = "6 pontos"
tm = "quadrado da soma de pontos"
if(fi==10):
	print("Furia infernal")
		elif(ga==6):
			print("Grito aterrorizante")
		elif(tm=="quadrado da soma de pontos"):
			print("Toque da morte")
else:
	print("nenhum ponto")
-- EXECUTION TIME:
0.17408
-- ERROR:
  File "/home/codebench/codes/1709/3069/main.py", line 6
    elif(ga==6):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
